2004-01-14  Jody Goldberg <jody@gnome.org>

	* Release 2.5.2

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1.1

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1

2003-12-03  Muktha  <muktha.narayan@wipro.com>

	* file-types-properties.glade: Added the label-for/by relation.
	Fixes #127304.

2003-12-01  Sivaiah Nallagatla  <snallagatla@novell.com>
	
	* service-info.c (service_info_save): Patch to remeber 
	custome program configured for Internet Services. #123976 in b.g.o

Mon Nov 17 00:13:07 2003  Jonathan Blandford  <jrb@gnome.org>

	* service-edit-dialog.c (populate_app_list): Patch from
	snallagatla@novell.com to fix a crash.

2003-10-28  Jody Goldberg <jody@gnome.org>

	* Release 2.5.0

2003-10-07  Muktha  <muktha.narayan@wipro.com>

	* file-types-properties.glade: Added title to the icon entry browse
	dialog. Fixes #122394.

2003-08-01  Dennis Cranston  <dennis_cranston at yahoo com>

	* file-types-properties.glade: Patch to fix spacing between action 
	area and vbox of preferences dialog.

2003-07-17  Dennis Cranston <dennis_cranston at yahoo com>

	* file-types-properties.glade:  Minor HIG widget padding adjustments.

2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

2003-06-06  Jody Goldberg <jody@gnome.org>

	* mime-edit-dialog.c (populate_component_list) : be careful about menu
	  sensitivity, the order is important.  Setting the menu of an option
	  menu makes it sensitive even if the menu is empty).  However, if the
	  option menu is initially insensitive then the first item in the menu
	  gets marked insensitive when the menu is reparented.  Once one item
	  is in the option menu becomes sensitive and the rest are ok.

2003-06-02  Balamurali Viswanathan <balamurali.viswanathan@wipro.com>

	* mime-edit-dialog.c: (validate_data): Give an error dialog if the 
	users clicks on OK button when the MIME type is not entered
	Fixes bug #113963
